# flare-ai-kit

./: .dockerignore  .env.example  .gitignore  .gitmodules  CONTRIBUTING.md  Dockerfile  Makefile  README.md  gcloud-deploy.sh  pyproject.toml  rag_demo_sample.txt  simple_fassets_test.py  verify_fassets_implementation.py
.github/: dependabot.yml
.github/workflows/: docker-scripts.yml  lint.yml  test.yml
.venv312/: pyvenv.cfg
docs/: agent_framework_readme.md  docker-scripts.md  docker_scripts_guide.md  troubleshooting.md
docs/ecosystem/: goldsky-integration.md
examples/: 01_get_ftso_price.py  02_da_layer_usage.py  02_fassets_basic.py  02_ingest_pdf.py  02_rag_vector_demo.py  03_advanced_agent_framework.py  03_agent_framework_demo.py  03_fassets_basic.py  03_multi_agent_simulation.py  03_simple_multi_agent_test.py  03_turnkey_wallet_integration.py  05_ingest_pdf.py  06_turnkey_wallet_integration.py  07_rag_vector_demo.py  clustering_consensus.py  create_sample_invoice.py  goldsky_integration_example.py  graph_query_example.py  majority_consensus.py  tournament_consensus.py  verify_fassets_implementation.py
examples/a2a/a2a_collaboration/: ftso_agent.py  orchestrator_agent.py  price_analysis_agent.py
examples/a2a/messaging/: ping_pong.py
examples/data/: create_sample_invoice.py
examples/docs/: FASSETS_TESTING_GUIDE.md
examples/python-client/: README.md  api_docs_human.md  generate_certs.py  pyproject.toml
examples/python-client/backend/: ra_tls_main.py
examples/python-client/client/: client_test.py
examples/ra-tls-client/: README.md  api_docs_OpenAPI.yaml  pyproject.toml  settings.py
examples/ra-tls-client/backend/: __init__.py  ra_tls_main.py  serverCert.pem  serverKey.pem
examples/ra-tls-client/client/: client_test.py
examples/web-chatbot/: Dockerfile  README.md  debug-start-backend.sh  nginx.conf  pyproject.toml  settings.py  supervisord.conf
examples/web-chatbot/backend/: __init__.py  chat.py  main.py
integrations/credentials/: FlareConsensusLearning.credentials.ts  FlareFtsoPrice.credentials.ts  FlarePostMessage.credentials.ts  FlareSemanticSearch.credentials.ts
integrations/n8n/: README.md
integrations/n8n/fastapi_service/: main.py  requirements.txt
scripts/: a2a_collaboration.py  da_layer.py  fassets_basic.py  ftso_price.py  ingest_pdf.py  pdf_ingestion.py  rag_vector_demo.py  wallet_integration.py
scripts/data/: create_sample_invoice.py
src/flare_ai_kit/: __init__.py  config.py  main.py
src/flare_ai_kit/a2a/: README.md  __init__.py  client.py  schemas.py  server.py  task_management.py
src/flare_ai_kit/abis/: Cyclo.json  FdcHub.json  KineticLending.json  KineticUnitroller.json  OpenOcean.json  Sceptre.json  SparkDEXSwapRouter.json  SparkDEXUniversalRouter.json  cylo.json  cylo.py  kineticComptroller.json  kineticSflr.json  sceptre.json  sceptreWflr.json
src/flare_ai_kit/agent/: __init__.py  adk_agent.py  base.py  ecosystem_tools.py  ecosystem_tools_wrapper.py  gemini_agent.py  pdf_tools.py  settings.py  settings_models.py  social_tools.py  tee_tools.py  tool.py  wallet_tools.py
src/flare_ai_kit/agent/adk/: __init__.py
src/flare_ai_kit/agent/tools/: __init__.py
src/flare_ai_kit/agents/: __init__.py  turnkey.py
src/flare_ai_kit/common/: __init__.py  exceptions.py  logging.py  schemas.py  utils.py
src/flare_ai_kit/consensus/: __init__.py
src/flare_ai_kit/consensus/aggregator/: __init__.py  advanced_aggregator.py  advanced_strategies.py  base.py  prediction.py  strategic.py  strategies.py  tournament_strategies.py  tournament_strategy.py
src/flare_ai_kit/consensus/communication/: __init__.py  base.py  channels.py
src/flare_ai_kit/consensus/coordinator/: __init__.py  base.py  simple.py
src/flare_ai_kit/consensus/engine/: base.py
src/flare_ai_kit/consensus/management/: __init__.py  dynamic.py
src/flare_ai_kit/consensus/resolution/: __init__.py  base.py  detectors.py  resolvers.py
src/flare_ai_kit/ecosystem/: __init__.py  explorer.py  flare.py  settings.py  settings_model.py  settings_models.py
src/flare_ai_kit/ecosystem/applications/: __init__.py  cyclo.py  cylo.py  flare_portal.py  kinetic.py  open_ocean.py  open_ocean_models.py  openocean.py  sceptre.py  sparkDex.py  sparkdex.py  stargate.py  stargate_models.py
src/flare_ai_kit/ecosystem/protocols/: DA_LAYER_README.md  __init__.py  da_layer.py  fassets.py  fdc.py  ftso.py  ftsov2.py
src/flare_ai_kit/ecosystem/tooling/: __init__.py  goldsky.py
src/flare_ai_kit/ingestion/: __init__.py  github_ingestor.py  pdf_processor.py  settings.py  settings_models.py
src/flare_ai_kit/mcp/: __init__.py
src/flare_ai_kit/onchain/: contract_poster.py
src/flare_ai_kit/prompts/: __init__.py  library.py  schemas.py  service.py  templates.py
src/flare_ai_kit/rag/: __init__.py  refresh.py  settings_models.py
src/flare_ai_kit/rag/graph/: engine.py  settings.py  settings_models.py
src/flare_ai_kit/rag/vector/: __init__.py  factory.py  settings.py  (+1 more)
src/flare_ai_kit/social/: __init__.py  settings.py  settings_models.py  telegram.py  x.py
src/flare_ai_kit/tee/: __init__.py  attestation.py  ra_tls.py  settings.py  settings_models.py  validation.py
src/flare_ai_kit/wallet/: __init__.py  base.py  permissions.py  tee_security.py  turnkey_wallet.py
tests/: test_consensus_engine.py  test_coordinator.py
tests/ecosystem/protocols/: test_ftso.py
tests/ecosystem/tooling/: test_goldsky.py
tests/integration/: test_adk_integration.py  test_agent_orchestration.py  test_goldsky_integration.py  test_mock_prompt_responses.py
tests/integration/ecosystem/: test_explorer.py
tests/unit/agent/: test_adk_tools.py  test_base.py  test_base_agent.py  test_gemini_agent.py  test_tool.py  test_tool_decorator.py
tests/unit/agents/: test_turnkey.py
tests/unit/consensus/: test_channels.py  test_coordinator.py  test_dynamic.py  test_engine_base.py  test_resolvers.py  test_strategies.py
tests/unit/ecosystem/: test_explorer.py  test_flare.py
tests/unit/ingestion/: test_github_ingestor.py  test_pdf_processor.py
tests/unit/wallet/: test_permissions.py  test_turnkey_wallet.py
(+47 files in other folders)
